--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.txt filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+**/.txt filter=lfs diff=lfs merge=lfs -text
+**.txt filter=lfs diff=lfs merge=lfs -text
+**.png filter=lfs diff=lfs merge=lfs -text
