Track large files with LFS
Former-commit-id: 8084b18d6244dfae817d4c0bd1c7b057bca19212 [formerly 4d11a1fcbb15a7d0bb53da3308b414675b2b76be]
Former-commit-id: a6272391fd7b9f1274736eb0711d1a46b8664e2e

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 **/.txt filter=lfs diff=lfs merge=lfs -text
 **.txt filter=lfs diff=lfs merge=lfs -text
 **.png filter=lfs diff=lfs merge=lfs -text
+results/StrongSORT_Git/**/*.npy filter=lfs diff=lfs merge=lfs -text
+results/StrongSORT_Git/**/*.zip filter=lfs diff=lfs merge=lfs -text
