--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,5 @@
 **.png filter=lfs diff=lfs merge=lfs -text
 results/StrongSORT_Git/**/*.npy filter=lfs diff=lfs merge=lfs -text
 results/StrongSORT_Git/**/*.zip filter=lfs diff=lfs merge=lfs -text
+*.npy filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
