--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,10 @@ results/StrongSORT_Git/**/*.npy filter=lfs diff=lfs merge=lfs -text
 results/StrongSORT_Git/**/*.zip filter=lfs diff=lfs merge=lfs -text
 *.npy filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+checkpoints/ filter=lfs diff=lfs merge=lfs -text
+git filter=lfs diff=lfs merge=lfs -text
+lfs filter=lfs diff=lfs merge=lfs -text
+track filter=lfs diff=lfs merge=lfs -text
+checkpoints/FastReID/*.pth filter=lfs diff=lfs merge=lfs -text
+checkpoints/FastReID/*/*.t7 filter=lfs diff=lfs merge=lfs -text
+checkpoints/FastReID/*.yml filter=lfs diff=lfs merge=lfs -text
